--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,69 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
 .container {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 200px;
-  border: 3px solid black;
-  background-color: aliceblue;
+  width: 400px;
+  height: 500px;
+  background: rgb(61, 49, 255);
+  background: linear-gradient(
+    122deg,
+    rgba(61, 49, 255, 1) 0%,
+    rgba(11, 90, 180, 1) 39%,
+    rgba(0, 131, 255, 1) 100%
+  );
   border-radius: 10px;
-  padding: 10px;
+  padding: 30px;
+  -webkit-box-shadow: 0px 0px 10px 7px rgba(21, 21, 21, 0.2);
+  -moz-box-shadow: 0px 0px 10px 7px rgba(21, 21, 21, 0.2);
+  box-shadow: 0px 0px 10px 7px rgba(21, 21, 21, 0.2);
 }
-
-.input {
-  box-sizing: border-box;
-  width: 200px;
-  font-size: 24px;
-  border-radius: 5px;
+.output {
+  border-bottom: 3px solid rgb(194, 194, 194);
+  margin-bottom: 10px;
+  padding-bottom: 10px;
   text-align: right;
-  border: 1px solid black;
-  padding-right: 10px;
-}
-button {
-  box-sizing: border-box;
-  margin: 2px;
-  width: 30px;
-  padding: 0;
-}
-p {
-  margin: 0;
-}
-input:focus,
-input:hover {
-  outline: 0;
   cursor: default;
 }
-.btn {
-  width: 85%;
+
+.output input {
+  box-sizing: border-box;
+  width: 100%;
+  font-size: 60px;
+  font-weight: 800;
+  border-radius: 5px;
+  text-align: right;
+  border: none;
+  background-color: transparent;
+  cursor: default;
+  outline: 0;
+}
+.buttons {
+  width: 100%;
+  height: 60%;
+  display: grid;
+  grid: auto-flow dense / 68px 68px 68px 68px 68px;
+  justify-items: center;
+  align-items: center;
+  grid-auto-columns: auto;
+}
+
+button {
+  width: 50px;
+  height: 50px;
+  margin: 2px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  font-size: 32px;
+  font-weight: 800;
+  background-color: transparent;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: rgba(161, 180, 255, 0.3);
+}
+.clearBtn {
+  width: 80px;
+  border-radius: 50px;
 }
