--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,8 @@
   box-shadow: 0px 0px 10px 7px rgba(21, 21, 21, 0.2);
 }
 .output {
+  font-family: "Ubuntu Mono", monospace;
+  font-weight: 400;
   border-bottom: 3px solid rgb(194, 194, 194);
   margin-bottom: 10px;
   padding-bottom: 10px;
@@ -27,10 +29,11 @@
 }
 
 .output input {
+  font-family: "Ubuntu Mono", monospace;
+  font-size: 60px;
+  font-weight: 700;
   box-sizing: border-box;
   width: 100%;
-  font-size: 60px;
-  font-weight: 800;
   border-radius: 5px;
   text-align: right;
   border: none;
@@ -49,13 +52,14 @@
 }
 
 button {
+  font-family: "Ubuntu Mono", monospace;
+  font-size: 32px;
+  font-weight: 700;
   width: 50px;
   height: 50px;
   margin: 2px;
   border-radius: 50%;
   border: 3px solid transparent;
-  font-size: 32px;
-  font-weight: 800;
   background-color: transparent;
   transition: background-color 0.3s;
 }
