--- a/src/App.css
+++ b/src/App.css
@@ -71,3 +71,10 @@ button:hover {
   width: 80px;
   border-radius: 50px;
 }
+.equalBtn {
+  background-color: rgba(255, 255, 255, 0.884);
+  color: rgb(61, 49, 255);
+}
+.equalBtn:hover {
+  background-color: rgba(255, 255, 255, 0.884);
+}
